# ds2

./: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  description_aggregated_salaries.csv  hw2.1.py  hw2.2.py  hw2.3.py  main.py  pyproject.toml  test.py
